--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,62 @@
-# --- macOS ---
+# ==== OS junk ====
 .DS_Store
 
-# --- Python ---
+# ==== Python ====
 __pycache__/
-*.pyc
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
+.eggs/
+.Python
+pip-wheel-metadata/
+*.pyo
+
+# Virtual envs
 .venv/
 venv/
+
+# Env / secrets
 .env
 .env.*
 
-# --- Node / Frontend ---
-node_modules/
+# Build & packaging
+build/
+dist/
+develop-eggs/
+.installed.cfg
+.wheels/
+*.manifest
+*.spec
+
+# Caches
+.cache/
+.pytest_cache/
+.mypy_cache/
+.pyre/
+.pytype/
+
+# Logs
 *.log
 
-# --- IDE ---
+# Coverage
+.coverage
+.coverage.*
+htmlcov/
+.cache coverage/
+coverage.xml
+
+# Editors / IDEs
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# --- Build & caches ---
-dist/
-build/
-.cache/
-
-# --- Misc you definitely don't want ---
-.nvm/
-Library/
-.nvm/
-Library/
-.DS_Store
-
-path/to/that/nested/repo/
+# (Optional) Node / Frontend — keep if you add a web UI later
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.next/
+out/
